--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ sentry-sdk = "^1.45.0"
 sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.29"}
 tenacity = "^9.0.0"
 uvicorn = "^0.30.0"
+numpy = "^1.24.0"  # Add numpy dependency
+pandas = "^2.0.0"  # Add pandas dependency
+tqdm = "^4.66.0"   # Add tqdm dependency
 
 [tool.poetry.group.dev.dependencies]
 behave = "^1.2.6"
