fixed system and removed redis start in docker

--- a/compose.override.yml
+++ b/compose.override.yml
@@ -42,18 +42,18 @@ services:
         condition: service_healthy
 
 
-  redis:
-    image: redis:7.2.4
-    command: ["redis-server", "--save", "60", "1"]
-    ports:
-      - 127.0.0.1:6379:6379
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    volumes:
-      - redis_data:/data
+#  redis:
+#    image: redis:7.2.4
+#    command: ["redis-server", "--save", "60", "1"]
+#    ports:
+#      - 127.0.0.1:6379:6379
+#    healthcheck:
+#      test: ["CMD", "redis-cli", "ping"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
+#    volumes:
+#      - redis_data:/data
 
 
 networks:
