changed redis dsn

--- a/compose.yml
+++ b/compose.yml
@@ -27,7 +27,7 @@ services:
 #    python -m prince_archiver.entrypoints.mock_prince.main
     environment:
       INTERVAL: ${INTERVAL:-30}
-      REDIS_DSN: tsu-dsk001.ipa.amolf.nl:6380
+      REDIS_DSN: redis://tsu-dsk001.ipa.amolf.nl:6380
       DATA_DIR: /data/
       SRC_IMG: /data/example.tif
     <<: *code-and-data-volumes
